--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
     "bootstrap": "^4.5.3",
+    "breakpoint-sass": "^2.7.1",
     "jquery": "^3.5.1",
+    "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0"
   },
